Closed
Bug 1233182
Opened 9 years ago
Closed 9 years ago
crash in mozilla::layers::ContentClientDoubleBuffered::FinalizeFrame - 44 release only
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: milan, Assigned: milan)
References
Details
Attachments
(2 files)
20.30 KB,
patch
|
milan
:
review+
ritu
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
1.00 KB,
patch
|
botond
:
review+
ritu
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
Bug 1200021 landed on 45 and 43, but 44 wasn't done. We were waiting to see if the results were conclusive. Along the way, bug 1200021 exposed a problem fixed in bug 1230740, currently only in 45.
The purpose of this bug is to track us doing the right thing in 44. That should probably be patches from both bug 1200021 and bug 1230740.
Assignee | ||
Updated•9 years ago
|
Milan, would you be able to help nominate the relevant patches for uplift to Beta44?
Flags: needinfo?(milan)
status-firefox44:
--- → affected
tracking-firefox44:
--- → +
Assignee | ||
Comment 2•9 years ago
|
||
Will do - bug 1230740 is on inbound, once it's on central for a few days, we can see what exactly we need.
Assignee | ||
Comment 3•9 years ago
|
||
OK, looks like, for 44, we will want to uplift bug 1200021, combined with bug 1230740. Because it's somewhat confusing, I'll put up a patch on this bug that is specific to 44, rather than try to uplift things form those two bugs.
Flags: needinfo?(milan)
Assignee | ||
Comment 4•9 years ago
|
||
Approval Request Comment
See discussion in bug 1200021, bug 1230740.
Attachment #8703757 -
Flags: review+
Attachment #8703757 -
Flags: approval-mozilla-beta?
Comment on attachment 8703757 [details] [diff] [review]
Beta only patch for bug 1200021 and 1230740. Carry r=bas
Both the fixes have been in Nightly and Aurora for a few weeks and the crash data looks promising, beta44+
Attachment #8703757 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Assignee | ||
Comment 7•9 years ago
|
||
This may be a cause for new crashes in bug 1238257, I will investigate in that bug.
Assignee | ||
Comment 8•9 years ago
|
||
Bad merge to produce the above patch, causing bug 1238257.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Assignee | ||
Comment 9•9 years ago
|
||
There is a problem with the first patch - this fixes it.
Attachment #8706514 -
Flags: review?(botond)
Attachment #8706514 -
Flags: approval-mozilla-beta?
Updated•9 years ago
|
Attachment #8706514 -
Flags: review?(botond) → review+
Comment on attachment 8706514 [details] [diff] [review]
Part 2 - two lines were reversed in the previous patch . r=botond
Fixes a top crash, taking it. Beta44+
Attachment #8706514 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Reverting to fx44 status to "affected" so it shows up on the queries Sheriff's use to look for beta+'d patches that still need to land.
Status: REOPENED → RESOLVED
Closed: 9 years ago → 9 years ago
Resolution: --- → FIXED
Comment 13•9 years ago
|
||
bugherder uplift |
status-b2g-v2.5:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•