Bug 1233182: Part 2. reversed some lines in the merge. r=botond a=ritu